Remove global 'google-api-handshake' constant